# gc_bridge

./: requirements.txt
gc_dialogflow_bridge/: CMakeLists.txt  (+1 more)
gc_speech_bridge/: CMakeLists.txt  files.json  package.xml  requirements.txt
gc_speech_bridge/config/: params.yaml
gc_speech_bridge/launch/: speechout.launch
gc_speech_bridge/scripts/: speech2text_mic copy.py  speech2text_mic.py
gc_speech_bridge/src/: speech_database copy.cpp  speech_database.cpp
gc_speech_bridge/storedSpeech/: 03pGgYthN1dPpAlu3PbwCRP0gtUGWL3UOsi5ObkjaN9QVsIYHr  0ntNj9VYcVeIsJmWzDwzA7FXyZ7yg2YfpR2WYV280gOqxAMxMH  1ioQZTkXJx0FQKIFOzvcWfUozrKicPCb7y1gRkBjhBy5TEKpCF  1zXmXMTiroHPlYtmCDv1bAOyWfpkl4Ok1vVYFyE5kWUV2MGDX9  2IhDHuvdJM9iLsS74xJurQiMdtvmbdwbtboAVhmn3vVNnwUptl  2JcWIpmVv2NT0L5hXmwczABGgwmrWAMZTz5jmpDhpaBpuEUR1R  2Z8rDzgt24lZU4CnCBOLTsZAMtzjhV7j4FZHCD8FHtojv0X5Bv  2l0fGVeXQ9L5Wea5wMZwwrx2hKiK1Ky35yiJSLqsU9v0mV4iqb  2lQ9THudJhqM2tDoDSFx1k3gexSlWIFX3dgVvY8EFwZHnk31AI  3R6urMJ1It7U287tVj2F3kpgrog5QuYRJfJAzc9HUEjWMoNpYP  3YcJPyaNkV7cK4e4r8USOUw0uJzYAGEBooSBl3XVYe5qikvYqP  3ybCEF9z5f7RCbOFKA4Xsr61e0F9PEaRB9dNPkKUOSta3IqLSs  4cOcMqms9dNkshUG7rv8TcYMYvCfPQ4T2S5NHrDOUb6KGbaNQU  6YXUSfDXUAHvVVqOFGyXAsjZTr0yBTaF27hSluzD3F7WixuwDq  6qoU1z1VAMpaieomZmq7YpFk1nAPVJuZAi19f2fqNSO57Arexh  6uH5ooh80eBnvGJW5dfKEYKN8mvsU9Ea2TdqFIwGu71qOKKTxz  7taaps9BdgVqnb967aaUOjaq00ytQOlVHJ55BEGmsjceKjkSJK  7yUifcp4GvsbT4nofnM4IrPjy6oDxNy2LRly1a2HTvswxeicP4  8cYucMNB2Ihxz6ZfJL2TwHDKfOd5pQ1v2Zncv9nvRUtQYS6qm6  8m03xEA7oY5hdMkZDFCghJpC82jLFasNKsPH5ZMt5RYimGFxVQ  9dDTPww8V0XCgv3u8rmycuQFYT9S3s8CTLgsGc0jaXvGQx9Zmv  (+134 more)
(+10 files in other folders)
